# DriftGuard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: driftguard.yml
configs/: driftguard.yml
cpp/: CMakeLists.txt
cpp/examples/: order_service_bench.cpp  scoped_example.cpp
cpp/include/driftguard/: perf_collector.hpp
cpp/src/: main.cpp  perf_collector.cpp
driftguard/: __init__.py  baselines.py  changepoint.py  cli.py  database.py  environment.py  models.py  pipeline.py  quality.py  reports.py  sprt.py  stats.py
examples/: benchmark_samples.jsonl
tests/: test_stats_pipeline.py
typescript/: package.json  tsconfig.json
typescript/src/common/: types.ts
typescript/src/dashboard/: render-dashboard.ts
typescript/src/github/: pr-comment.ts
