[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "driftguard"
version = "0.1.0"
description = "Continuous performance regression intelligence for CI/CD"
requires-python = ">=3.10"
authors = [{ name = "DriftGuard Contributors" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
driftguard = "driftguard.cli:main"

[tool.setuptools]
packages = ["driftguard"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
